# OpenCL_DFT

./: 500_synthetic_sources.csv  CMakeLists.txt  LICENSE  README.md  direct_fourier_transform.c  direct_fourier_transform.cl  direct_fourier_transform.h  main.c  unit_test_sources.txt  unit_test_visibilities.txt  unit_testing.cpp
